style the footer

--- a/main.css
+++ b/main.css
@@ -195,3 +195,15 @@ em,
     padding: 5px 20px;
     font-size: 14px;
 }
+
+/* footer */
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: #F9F8FA;
+    padding: 25px 0;
+    font-size: 23px;
+}
