--- a/main.css
+++ b/main.css
@@ -99,15 +99,22 @@ a {
 .main-text {
     color: #E5E7EB;
     font-size: 18px;
-    margin-bottom: .3em;
+    margin-bottom: .8em;
 }
 
 button {
     background-color: #00008B;
     color: #E5E7EB;
     border-radius: 5px;
-    padding: 6px 10px;
+    padding: 6px 20px;
     border-color: #F9F8FA;
+}
+
+.header-subsection2 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2em;
 }
 
 /* section one */
@@ -198,7 +205,7 @@ em,
 
 /* footer */
 
-footer {
+footer p {
     display: flex;
     justify-content: center;
     align-items: center;
